[gd_scene load_steps=6 format=2]

[ext_resource path="res://ui/manage_party/reserve_item.gd" type="Script" id=1]
[ext_resource path="res://ui/panel_white_transparent.png" type="Texture" id=2]
[ext_resource path="res://ui/panel.tres" type="StyleBox" id=3]

[sub_resource type="Animation" id=2]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath(".:texture:region")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Rect2( 0, 0, 32, 32 ) ]
}

[sub_resource type="Animation" id=3]
resource_name = "idle"
length = 0.8
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath(".:texture:region")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ Rect2( 0, 0, 32, 32 ), Rect2( 32, 0, 32, 32 ), Rect2( 64, 0, 32, 32 ), Rect2( 96, 0, 32, 32 ), Rect2( 128, 0, 32, 32 ), Rect2( 160, 0, 32, 32 ), Rect2( 192, 0, 32, 32 ), Rect2( 224, 0, 32, 32 ) ]
}

[node name="ReserveItem" type="NinePatchRect"]
margin_right = 31.0
margin_bottom = 31.0
rect_min_size = Vector2( 31, 31 )
mouse_filter = 0
texture = ExtResource( 2 )
patch_margin_left = 3
patch_margin_top = 3
patch_margin_right = 3
patch_margin_bottom = 3
script = ExtResource( 1 )

[node name="TextureRect" type="TextureRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
root_node = NodePath("../TextureRect")
autoplay = "idle"
anims/RESET = SubResource( 2 )
anims/idle = SubResource( 3 )

[node name="PopupDialog" type="PopupDialog" parent="."]
margin_left = -8.0
margin_top = 32.0
margin_right = 44.0
margin_bottom = 58.0
custom_styles/panel = ExtResource( 3 )

[node name="HBoxContainer" type="VBoxContainer" parent="PopupDialog"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_top = 4.0

[node name="Label" type="Label" parent="PopupDialog/HBoxContainer"]
margin_right = 52.0
margin_bottom = 7.0
mouse_filter = 1
text = "Add To Party"
align = 1
valign = 1

[node name="CancelLabel" type="Label" parent="PopupDialog/HBoxContainer"]
margin_top = 11.0
margin_right = 52.0
margin_bottom = 18.0
mouse_filter = 1
text = "Cancel"
align = 1
valign = 1

[connection signal="gui_input" from="." to="." method="_on_ReserveItem_gui_input"]
[connection signal="popup_hide" from="PopupDialog" to="." method="_on_PopupDialog_popup_hide"]
[connection signal="gui_input" from="PopupDialog/HBoxContainer/Label" to="." method="_on_Label_gui_input"]
[connection signal="gui_input" from="PopupDialog/HBoxContainer/CancelLabel" to="." method="_on_CancelLabel_gui_input"]
